# clawdentity

./: .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  PRD.md  PROTOCOL.md  README-draft.md  README.md  biome.json  draft-caw-clawdentity-protocol-00.html  draft-caw-clawdentity-protocol-00.txt  draft-caw-clawdentity-protocol-00.xml  draft-ravikiran-clawdentity-protocol-00.html  draft-ravikiran-clawdentity-protocol-00.txt  draft-ravikiran-clawdentity-protocol-00.xml  draft-vemula-clawdentity-protocol-00.html  draft-vemula-clawdentity-protocol-00.txt  draft-vemula-clawdentity-protocol-00.xml  lint-staged.config.mjs  nx.json  package.json  pnpm-lock.yaml  sparkling-sauteeing-brook.md  tsconfig.base.json
.claude/: settings.local.json
.github/: AGENTS.md
.husky/: AGENTS.md  pre-commit  pre-push
assets/: preview.html
crates/: AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  INTEGRATION_TEST_PLAN.md  KAI_REVIEW.md  PLAN.md  PLATFORM_INBOUND_FORMATS.md  PLATFORM_RESEARCH.md  REVIEW.md  TEST_PLAN.md  WEBHOOK_PR_PLAN.md
crates/clagram-cli/: Cargo.toml
crates/clagram-cli/src/: main.rs
crates/clagram-cli/src/commands/: connector.rs
crates/clagram-core/: Cargo.toml
crates/clagram-core/src/: admin.rs  agent.rs  config.rs  connector_client.rs  crl.rs  db.rs  db_outbound.rs  db_peers.rs  did.rs  error.rs  identity.rs  invite.rs  lib.rs  openclaw_relay_test.rs  peers.rs  qr.rs  registry.rs  runtime_auth.rs  runtime_server.rs  runtime_trusted_receipts.rs  service.rs  signing.rs  verify.rs
crates/clawdentity-cli/: AGENTS.md  Cargo.toml
crates/clawdentity-cli/src/: main.rs
crates/clawdentity-cli/src/commands/: AGENTS.md  connector.rs  group.rs  install.rs  mod.rs  onboarding.rs  pair.rs  peer.rs  provider.rs  verify.rs
crates/clawdentity-cli/src/commands/connector/: AGENTS.md  delivery.rs  headers.rs  receipts.rs  runtime_config.rs  tests.rs
crates/clawdentity-cli/src/commands/connector/delivery/: AGENTS.md  message_content.rs  openclaw_payload.rs  pair_accepted.rs  provider_forward.rs  receipt_forward_queue.rs  retry.rs  sender_profile.rs  webhook_payload.rs
crates/clawdentity-cli/src/commands/connector/delivery/pair_accepted/: tests.rs
crates/clawdentity-cli/src/commands/connector/runtime_config/: AGENTS.md  delivery_config.rs
crates/clawdentity-cli/src/commands/connector/tests/: expected_agent_name.rs  fixtures.rs  inbound_names.rs  openclaw_payload_contract.rs  peer_refresh.rs  provider_runtime.rs
crates/clawdentity-cli/src/commands/onboarding/: AGENTS.md  onboarding_flow.rs  tests.rs
crates/clawdentity-core/: AGENTS.md  Cargo.toml
crates/clawdentity-core/assets/: AGENTS.md
crates/clawdentity-core/assets/openclaw-skill/skill/: SKILL.md
crates/clawdentity-core/assets/openclaw-skill/skill/references/: AGENTS.md  clawdentity-environment.md  clawdentity-protocol.md  clawdentity-registry.md
crates/clawdentity-core/assets/openclaw-skill/transform/: AGENTS.md  relay-to-peer.mjs
crates/clawdentity-core/src/: AGENTS.md  agent.rs  api_key.rs  connector_frames.rs  constants.rs  db.rs  db_inbound.rs  db_verify_cache.rs  error.rs  http.rs  lib.rs  openclaw_doctor.rs  openclaw_relay_test.rs  openclaw_setup.rs  pairing.rs  peers.rs  provider.rs  provider_nanobot.rs  provider_nanoclaw.rs  provider_openclaw.rs  provider_picoclaw.rs  runtime_openclaw.rs  service.rs  verify.rs
crates/clawdentity-core/src/connector/: AGENTS.md  client.rs  frames.rs  mod.rs  service.rs
crates/clawdentity-core/src/db/: AGENTS.md  inbound.rs  mod.rs  outbound.rs  peers.rs  verify_cache.rs
crates/clawdentity-core/src/identity/: config.rs  did.rs  identity.rs  mod.rs  signing.rs
crates/clawdentity-core/src/pairing/: AGENTS.md  mod.rs  pairing.rs  pairing_tests.rs  peers.rs  qr.rs
crates/clawdentity-core/src/providers/: AGENTS.md  hermes.rs  hermes_helpers.rs  hermes_tests.rs  mod.rs  nanobot.rs  nanoclaw.rs  openclaw.rs  openclaw_doctor.rs  picoclaw.rs  runtime_state.rs
crates/clawdentity-core/src/providers/openclaw/: AGENTS.md  asset_bundle.rs  assets.rs  assets_tests.rs  cli.rs  connector_runtime.rs  connector_runtime_tests.rs  doctor.rs  doctor_checks.rs  doctor_tests.rs  mod.rs  mod_tests.rs  relay_test.rs  setup.rs  test_support.rs
crates/clawdentity-core/src/registry/: AGENTS.md  admin.rs  agent.rs  agent_auth_client.rs  agent_name.rs  agent_tests.rs  api_key.rs  crl.rs  group.rs  invite.rs  mod.rs  registry.rs
crates/clawdentity-core/src/registry/group/: AGENTS.md  tests.rs
crates/clawdentity-core/src/runtime/: AGENTS.md  auth.rs  mod.rs  openclaw.rs  relay.rs  replay.rs  server.rs  trusted_receipts.rs  webhook.rs
crates/clawdentity-core/src/runtime/server/: tests.rs
crates/clawdentity-core/tests/: structural.rs
crates/docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  GOLDEN_PRINCIPLES.md
crates/tests/integration/: .env  Makefile  docker-compose.yml
crates/tests/integration/builder/: Dockerfile  Dockerfile.prebuilt
crates/tests/integration/providers/nanobot/: Dockerfile  entrypoint.sh  mock-platform.py
crates/tests/integration/providers/nanoclaw/: Dockerfile  entrypoint.sh
crates/tests/integration/providers/openclaw/: Dockerfile  entrypoint.sh  mock-platform.js
crates/tests/integration/providers/picoclaw/: Dockerfile  entrypoint.sh  mock-platform.py
crates/tests/integration/runner/: Dockerfile  lib.sh  run-all.sh
crates/tests/integration/scenarios/: 00-health.sh  01-identity.sh  02-pairing.sh  03-send-receive.sh  04-round-trip.sh  05-mesh.sh  06-offline-queue.sh  AGENTS.md
crates/tests/local/: run.sh
crates/tests/local/mock-proxy/: Cargo.toml  Dockerfile
crates/tests/local/mock-proxy/src/: AGENTS.md  main.rs  pairing.rs  relay.rs  state.rs
crates/tests/local/mock-registry/: Cargo.toml  Dockerfile
crates/tests/local/mock-registry/src/: AGENTS.md  agent.rs  api_keys.rs  crypto.rs  identity.rs  invites.rs  main.rs  pairing.rs  state.rs
docs/: AGENTS.md  ARCHITECTURE.md  DESIGN_DECISIONS.md  GOLDEN_PRINCIPLES.md  HARNESS_ACTION_PLAN.md  MONOREPO.md  OPENCLAW_WEBHOOK_METADATA_PROPOSAL.md  (+2 more)
(+527 files in other folders)
