[workspace]
members = [
    "clawdentity-core",
    "clawdentity-cli",
    "tests/local/mock-registry",
    "tests/local/mock-proxy",
]
default-members = ["clawdentity-core", "clawdentity-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/vrknetha/clawdentity"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
url = "2.5.8"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
debug = 1
incremental = true
codegen-units = 256

[profile.test]
debug = 1
incremental = true
codegen-units = 256
