[package]
name = "clagram-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
dirs.workspace = true
ed25519-dalek = "2.2.0"
getrandom = "0.4.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
thiserror.workspace = true
ulid = "1.2.1"
url.workspace = true

[dev-dependencies]
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.5"
