[package]
name = "clawdentity-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clawdentity-core = { path = "../clawdentity-core" }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde_json.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
