[package]
name = "clawdentity-cli"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Clawdentity Rust CLI for identity onboarding, provider setup, and connector operations."
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
clap.workspace = true
clawdentity-core = { version = "0.1.5", path = "../clawdentity-core" }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde_json.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
