[package]
name = "clawdentity-cli"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for cross-platform agent messaging — pair, message, and group-chat between any AI agents."
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
clap.workspace = true
clawdentity-core = { version = "0.1.9", path = "../clawdentity-core" }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3.25.0"
wiremock = "0.6.5"
