[package]
name = "clawdentity-core"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for cross-platform agent messaging — identity, relay, connector, and provider integrations."
readme = "../../README.md"

[dependencies]
base64 = "0.22.1"
axum = { version = "0.8.1", features = ["http1", "json", "tokio"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
dirs.workspace = true
ed25519-dalek = "2.2.0"
futures-util = "0.3.32"
getrandom = "0.4.1"
image = { version = "0.25.9", default-features = false, features = ["png"] }
json5 = "0.4.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "blocking"] }
qrcode = "0.14.1"
quircs = "0.10.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
ulid = "1.2.1"
url.workspace = true

[dev-dependencies]
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
wiremock = "0.6.5"
