[package]
name = "mock-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8.1", features = ["http1", "json", "tokio", "ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
clawdentity-core = { path = "../../../clawdentity-core" }
futures-util = "0.3.32"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-tungstenite = "0.28.0"
ulid = "1.2.1"
url.workspace = true
