[package]
name = "mock-registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8.1", features = ["http1", "json", "tokio"] }
base64 = "0.22.1"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
ed25519-dalek = "2.2.0"
getrandom = "0.4.1"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
ulid = "1.2.1"
url.workspace = true
